# otto-mcu-fw-rs

./: Cargo.toml  Embed.toml
.cargo/: config
src/: cmd.rs  i2c.rs  input.rs  keys.rs  leds.rs  main.rs
src/util/: arraymap.rs  bitarray.rs  mod.rs
