cargo-features = ["strip"]

[package]
name = "otto-mcu-fw-rs"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy = { version = "0.1.0", path = "embassy/embassy", features = ["defmt", "defmt-trace"] }
embassy-traits = { version = "0.1.0", path = "embassy/embassy-traits", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = ["defmt", "defmt-trace", "stm32f103r8", "unstable-pac", "memory-x", "time-driver-tim2"]  }
embassy-hal-common = {version = "0.1.0", path = "embassy/embassy-hal-common" }

defmt = "0.2.3"
defmt-rtt = "0.2.0"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

num_enum = { version = "0.5.4", default-features = false }
rgb = "0.8.27"

[profile.release]
strip = true
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[profile.dev]
codegen-units = 1
lto = true
opt-level = "z"
